ec2kupods/kube_net_policies/00_deny_all_fe_db.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-db
  namespace: fe-db
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
