ec2kupods/kube_net_policies/00_deny_all_fe_web.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-web
  namespace: fe-web
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
