ec2kupods/kube_net_policies/01_0_allow_in_dns_fe-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-in-dns-fe-web
  namespace: fe-web
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
    ports:
    - protocol: UDP
      port: 53
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: kube-system
