ec2kupods/kube_net_policies/02_1_allow_out_redis_db2web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-ff-db2web
  namespace: fe-web
spec:
  podSelector:
    matchLabels:
      app: fe-webapp
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels: 
          name: fe-dbns
    ports:
      - protocol: TCP
        port: 6379
