ec2kupods/kube_net_policies/03_0_allow_in_http_fe-db2fe-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http-api-allow
  namespace: fe-web
spec:
  podSelector:
    matchLabels:
      name: fe-webapp
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels: 
          component: apiserver
    ports:
      - protocol: TCP
        port: 80
