ec2kupods/kube_net_policies/03_1_allow_out_http_fe-db2fe-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http-ff-db2web
  namespace: fe-db
spec:
  podSelector:
    matchLabels:
      app: fe-dbapp
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels: 
          name: fe-webns
    ports:
      - protocol: TCP
        port: 80
